main/default/objects/Account_Custom__c/Account_Custom__c.object-meta.xml
<CustomObject>
    <label>Account Custom</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>