main/default/objects/Account_Custom__c/fields/Account_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_del__c</fullName>
    <label>Account Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>