main/default/objects/Account_Custom__c/fields/Standard_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Standard_Account_ID__c</fullName>
    <externalId>true</externalId>
    <label>Standard Account ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>