main/default/objects/Account_Custom__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>as</fullName>
            </value>
            <value>
                <fullName>dfs</fullName>
            </value>
            <value>
                <fullName>fdcs</fullName>
            </value>
            <value>
                <fullName>sdc</fullName>
            </value>
            <value>
                <fullName>sd</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
            <value>
                <fullName>s</fullName>
            </value>
            <value>
                <fullName>xc</fullName>
            </value>
            <value>
                <fullName>sc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>