main/default/objects/Account_Custom__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Phone__c</columns>
    <columns>Account_Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>