main/default/objects/Account_Custom__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>Account_Name__c</columns>
    <columns>Account_Phone__c</columns>
    <columns>Account_Type__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>